class HunterPrey:
    def __init__(self):
        pass

    # hunter prey optimization

