from algorithms.a_star import AStar
from algorithms.q_iteration import QIteration
from algorithms.hunter_prey import HunterPrey


class PacmanBrain:
    def __init__(self):
        pass
