class QIteration:
    def __init__(self):
        pass